<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.notify.MainActivity"
    android:background="@drawable/background"
     >

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    
    <TextView
        android:id="@+id/txt_dummy03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <Button
        android:id="@+id/btn_view_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_log"
        android:onClick="goToLogView" 
        android:background="#211A52"
        android:textColor="#ffffff"/>
    
    <TextView
        android:id="@+id/txt_dummy04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <Button
        android:id="@+id/btn_create_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_message"
        android:onClick="goToCreateMsg"
        android:background="#211A52"
        android:textColor="#ffffff"/>

    

</LinearLayout>
